--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "_mon_application_",
+  "name": "generateur_json",
   "version": "1.0.0",
-  "description": "_description_",
+  "description": "Générateur de fichier JSON",
   "main": "build/app.js",
   "directories": {
     "lib": "lib"
